--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<title>My Bio</title>
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+
 
 </head>
 
@@ -13,21 +14,6 @@
 	<header><strong>David Muzeni</header></strong>
 
 	<div class="container">
-
-	<section id="Main Bio">
-		
-		<img src="http://placehold.it/350x150">
-
-		<h1>Brief Background</h1>
-
-		<div class="me">
-
-			<p>I was born in 1966 in New Jersey.  Lived in Paramus, NJ through high school.  Went to the University of Maine for a Pre-Veterinary Medicine degree, ended up majoring in alcohol consumption and left after a year.  Received an Associates Degree in Hospitality Mgmt. from Johnson & Wales in Providence, Rhode Island. I met my wife at J&W. We married a year and two months after first meeting, and have been married for going on 28 yrs this May.  We have two children, Michael 20, Nicole 17.  We have two rescue dogs, Buster a 5 yr old Sheppard mix who we rescued as a puppy, and Spartacus a 9-12 yr old Retriever mix who we rescued 3 yrs ago.
-			I am an avid Dallas Cowboys, New York Yankees, and New York Rangers fan.</p>
-
-		</div>
-
-	</section>
 
 	<section id="Contact Info">
 		<h2>Contact Info</h2>
@@ -45,11 +31,26 @@
 
 		</section>
 
+
+	<section id="Main Bio">
 		
+		<img src="http://placehold.it/350x150">
+
+		<h1>Brief Background</h1>
+
+		<div class="me">
+
+			<p>I was born in 1966 in New Jersey.  Lived in Paramus, NJ through high school.  Went to the University of Maine for a Pre-Veterinary Medicine degree, ended up majoring in alcohol consumption and left after a year.  Received an Associates Degree in Hospitality Mgmt. from Johnson & Wales in Providence, Rhode Island. I met my wife at J&W. We married a year and two months after first meeting, and have been married for going on 28 yrs this May.  We have two children, Michael 20, Nicole 17.  We have two rescue dogs, Buster a 5 yr old Sheppard mix who we rescued as a puppy, and Spartacus a 9-12 yr old Retriever mix who we rescued 3 yrs ago.
+			I am an avid Dallas Cowboys, New York Yankees, and New York Rangers fan.</p>
+
+		</div>
+
+	</section>
+
+	
 
 
 		
-
 	</div>
 
 <footer>Copyright 2017 Dave Muzeni</footer>
