Atleast figured out how to float contacts to right side

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div class="container">
 
-	<section id="Contact Info">
+	<aside id="Contact Info">
 		<h2>Contact Info</h2>
 
 			<ul>
@@ -29,8 +29,8 @@
 				</a></li></strong>
 			</ul>	
 
-		</section>
-
+		</aside>	
+		
 
 	<section id="Main Bio">
 		
@@ -50,6 +50,7 @@
 	</section>
 
 	
+
 
 
 		
