can't get footer to respond

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,25 @@
 
 	<div class="container">
 
+	<aside id="Connect with Me">
+		
+	<h1>Connect with Me</h1>
+
+			<ul>
+				<li>
+					<strong>
+						Email: <a href="#">dmuzeni66@gmail.com</a>
+					</strong>
+				</li>
+				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
+				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
+				</a></li></strong>
+			</ul>	
+
+
+
+	</aside>
+
 	<section id="Contact">
 		
 	<h1>Contact</h1>
@@ -50,31 +69,15 @@
   				</ul>
 
   				</form>	
+  				
   				<input type="submit" name="Submit">
 
 
 	</section>
 
-	
+	</aside>
 
-	<section id="Connect with Me">
-		
-	<h1>Connect with Me</h1>
-
-		<ul>
-				<li>
-					<strong>
-						Email: <a href="#">dmuzeni66@gmail.com</a>
-					</strong>
-				</li>
-				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
-				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
-				</a></li></strong>
-			</ul>	
-
-
-
-	</section>
+	</div>
 
 	
 
