--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,23 @@
 
 	<div class="container">
 
+	<aside class="Connect with Me">
+
+			<h2>Connect with Me</h2>
+
+			<ul>
+				<li>
+					<strong>
+						Email: <a href="#">dmuzeni66@gmail.com</a>
+					</strong>
+				</li>
+				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
+				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
+				</a></li></strong>
+			</ul>	
+
+		</aside>	
+
 	<h1>Portfolio</h1>
 
 		<div class="Image1">
@@ -55,21 +72,6 @@
 			<h4>Rock Paper Scissors</h4>
 		
 		</div>
-
-		<div class="Connect with Me">
-
-			<h2>Connect with Me</h2>
-
-			<ul>
-				<li>
-					<strong>
-						Email: <a href="#">dmuzeni66@gmail.com</a>
-					</strong>
-				</li>
-				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
-				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
-				</a></li></strong>
-			</ul>	
 
 
 
