I have added quite a few changes along with comments for you to look at, removed unecessary files and added navigation

--- a/index.html
+++ b/index.html
@@ -1,64 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-	<title>My Bio</title>
-
-
-
-</head>
-
-<body>
-
-	<header><strong>David Muzeni</header></strong>
-
-	<div class="container">
-
-	<aside id="Contact Info">
-		<h2>Contact Info</h2>
-
-			<ul>
-				<li>
-					<strong>
-						Email: <a href="#">dmuzeni66@gmail.com</a>
-					</strong>
-				</li>
-				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
-				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
-				</a></li></strong>
-			</ul>	
-
-		</aside>	
-		
-
-	<section id="Main Bio">
-		
-
-
-		<img src="http://placehold.it/350x150">
-
-		<h1>Brief Background</h1>
-
-		<div class="me">
-
-			<p>I was born in 1966 in New Jersey.  Lived in Paramus, NJ through high school.  Went to the University of Maine for a Pre-Veterinary Medicine degree, ended up majoring in alcohol consumption and left after a year.  Received an Associates Degree in Hospitality Mgmt. from Johnson & Wales in Providence, Rhode Island. I met my wife at J&W. We married a year and two months after first meeting, and have been married for going on 28 yrs this May.  We have two children, Michael 20, Nicole 17.  We have two rescue dogs, Buster a 5 yr old Sheppard mix who we rescued as a puppy, and Spartacus a 9-12 yr old Retriever mix who we rescued 3 yrs ago.
-			I am an avid Dallas Cowboys, New York Yankees, and New York Rangers fan.</p>
-
-		</div>
-
-	</section>
-
-	
-
-
-
-		
-	</div>
-
-<footer>Copyright 2017 Dave Muzeni</footer>
-
-
-</body>
+	<head>
+		<!-- The code indention needs to look alot more like this in HTML -->
+		<title>My Bio</title>
+			<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	</head>
+	<body>
+		<header>
+			<div class="container">
+				<a href="index.html" id="logo"><strong>David Muzeni</strong></a>
+				<nav>
+					<a href="index.html">About</a>
+					<a href="portfolio.html">Portfolio</a>
+					<a href="contact.html">Contact</a>
+				</nav>
+			</div>
+		</header>
+		<div class="container">
+			<!-- ID's and class names can not be separated by a space -->
+			<section id="mainBio">
+				<img src="http://placehold.it/350x150">
+				<h1>Brief Background</h1>
+				<div class="me">
+					<p>I was born in 1966 in New Jersey.  Lived in Paramus, NJ through high school.  Went to the University of Maine for a Pre-Veterinary Medicine degree, ended up majoring in alcohol consumption and left after a year.  Received an Associates Degree in Hospitality Mgmt. from Johnson & Wales in Providence, Rhode Island. I met my wife at J&W. We married a year and two months after first meeting, and have been married for going on 28 yrs this May.  We have two children, Michael 20, Nicole 17.  We have two rescue dogs, Buster a 5 yr old Sheppard mix who we rescued as a puppy, and Spartacus a 9-12 yr old Retriever mix who we rescued 3 yrs ago.
+					I am an avid Dallas Cowboys, New York Yankees, and New York Rangers fan.</p>
+				</div>
+			</section>
+			<aside id="contactInfo">
+				<h2>Contact Info</h2>
+					<ul>
+						<!-- List items get written on one line -->
+						<li><strong>Email:</strong><a href="#">dmuzeni66@gmail.com</a></li>
+						<!-- strong tags are for test only, they won't effect images -->
+						<li><strong>Linkdin :</strong><a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
+						<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>
+							</a></li>
+					</ul>
+			</aside>
+		</div><!-- end of container -->
+		<!-- elament tags stack on the same level and then the content inside gets tabbed over -->
+		<footer>
+			<div class="container">
+				Copyright &copy; 2017 Dave Muzeni
+			</div>
+		</footer>
+	</body>
 </html>
-
