--- a/portfolio.html
+++ b/portfolio.html
@@ -2,19 +2,23 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<title></title>
 
 </head>
-<body>	
-
-<strong><header>David Muzeni</header></strong>
-
-			
-
+<body>
+	<header>
+		<div class="container">
+			<a href="index.html" id="logo"><strong>David Muzeni</strong></a>
+			<nav>
+				<a href="index.html">About</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="contact.html">Contact</a>
+			</nav>
+		</div>
+	</header>
 	<div class="container">
-
 	<aside class="Connect with Me">
 
 			<h2>Connect with Me</h2>
@@ -26,26 +30,26 @@
 					</strong>
 				</li>
 				<li><strong>Linkdin :<a href="https://www.linkedin.com/in/david-muzeni-8129a9124" target="_blank">
-				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>	
+				<img src=https://cdn4.iconfinder.com/data/icons/iconset-addictive-flavour/png/social%20media/social_linked_in.png>
 				</a></li></strong>
-			</ul>	
+			</ul>
 
-		</aside>	
+		</aside>
 
 	<h1>Portfolio</h1>
 
 		<div class="Image1">
 
 		<img src="http://lorempixel.com/125/125/technics/1/cc" alt="hangman" style="width: 230px; height: auto;">
-			
+
 			<h4>Hangman</h4>
 
 		</div>
 
 		<div class="Image2">
 
-		<img src="http://lorempixel.com/125/125/technics/2/cc" alt="RPG Game" style="width: 230px; height: auto;">	
-			
+		<img src="http://lorempixel.com/125/125/technics/2/cc" alt="RPG Game" style="width: 230px; height: auto;">
+
 			<h4>RPG Game</h4>
 		</dir>
 
@@ -53,24 +57,24 @@
 
 		<img src="http://lorempixel.com/125/125/technics/5/cc" alt="Trivia Game" style="width: 230px; height: auto;">
 
-			<h4>Trivia Game</h4>	
-		
+			<h4>Trivia Game</h4>
+
 		</div>
 
 		<div class="Image4">
 
 		<img src="http://lorempixel.com/125/125/technics/6/cc" alt="Rutgers Info Widget" style="width: 230px; height: auto;">
-		
-			<h4>Rutgers Info Widget</h4>	
-		
+
+			<h4>Rutgers Info Widget</h4>
+
 		</div>
 
 		<div class="Image5">
 
 		<img src="http://lorempixel.com/125/125/technics/9/cc" alt="Rock Paper Scissors" style="width: 230px; height: auto;">
-		
+
 			<h4>Rock Paper Scissors</h4>
-		
+
 		</div>
 
 
